Fixed alignment on tablets

--- a/sass/theme/_hero.scss
+++ b/sass/theme/_hero.scss
@@ -12,7 +12,7 @@
            
             height: 40rem;
 
-            @media screen and (max-width: 400px) {
+            @media screen and (max-width: 767px) {
 
                 height: 15rem;
             }
